# oslo-cookiecutter

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  cookiecutter.json  openstack-common.conf  tox.ini
oslo.{{cookiecutter.module_name}}/: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  lower-constraints.txt  openstack-common.conf  reno.yaml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
oslo.{{cookiecutter.module_name}}/doc/: requirements.txt
oslo.{{cookiecutter.module_name}}/doc/source/: conf.py  index.rst  installation.rst  usage.rst
oslo.{{cookiecutter.module_name}}/doc/source/reference/: index.rst
oslo.{{cookiecutter.module_name}}/oslo_{{cookiecutter.module_name}}/tests/: test_{{cookiecutter.module_name}}.py
oslo.{{cookiecutter.module_name}}/releasenotes/source/: conf.py  index.rst
oslo.{{cookiecutter.module_name}}/tests/: base.py  test_{{cookiecutter.module_name}}.py
tools/: test_template.sh  test_tox_targets.sh
