[metadata]
name = oslo.{{ cookiecutter.module_name }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://launchpad.net/oslo
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython


[files]
packages =
    oslo_{{ cookiecutter.module_name }}

[compile_catalog]
directory = oslo.{{cookiecutter.module_name}}/locale
domain = oslo.{{cookiecutter.module_name}}

[update_catalog]
domain = oslo.{{cookiecutter.module_name}}
output_dir = oslo.{{cookiecutter.module_name}}/locale
input_file = oslo.{{cookiecutter.module_name}}/locale/oslo.{{cookiecutter.module_name}}.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = oslo.{{cookiecutter.module_name}}/locale/oslo.{{cookiecutter.module_name}}.pot
